--- a/toDo.txt
+++ b/toDo.txt
@@ -1,19 +1,30 @@
 еще нужно добавить подписи к типа
 infp - няши - стесняши
-infj - яндере
-intj - deadinside
-estj - цундеры
-estp istp - офники
-entj - боги
+enfp - солнышки
+intp - злые гении
+entp - харизматичные
+istp - гули
+estp - офники
 isfp - вайбовые
 esfp - опасно вайбовые
-enfp - солнышки
-intp - 
-isfj - подводные
-esfj - 
+
+infj - яндере
+enfj - социальные магниты
+intj - потеряшки
+entj - боги
+istj - нельзя обижать
+estj - цундеры
+isfj - добрые и красивые
+esfj - домашние
+
+лучше это позже внести, потому что...
 
 Степень обугленности?)
 
 контроллер принятия
 и демонстрацию всех лайков
 
+Показывать расстояния. + Контроллер прохождения тестов. +
+Увеличить расстояние до 10К. Потому что мало людей. +
+
+На будущее: добавить описание того, как подбирать типы для общения.
