--- a/toDo.txt
+++ b/toDo.txt
@@ -28,3 +28,7 @@ esfj - домашние
 Увеличить расстояние до 10К. Потому что мало людей. +
 
 На будущее: добавить описание того, как подбирать типы для общения.
+
+Нужно показать сколько людей в каких группах.
+
+Мейби кнопки на 3тьем изображении стоит нарисовать самому.
